
  - When invoked with no filename arguments, `specl` will check all your
    specifications, as long as they have names ending in `_spec.yaml` and
    are kept in or somewhere below the `specs/` directory of your project.

  - The report and progress formatters now display file:line:expectation:
    annotations for failed and pending expectations in verbose mode (-v).

  - You can now filter out all but the examples at a specified line
    number either by pasting from the output of a failed or pending
    expectation in verbose mode, by invoking specl as:

        specl specs/some_spec.yaml:44:1

    or with as many `+NN` as necessary to select several examples from
    the following file:

        specl +44 +48 specs/some_spec.yaml

    or a combination of the above. Note that the final `:1` in the
    former is ignored and can be omitted (it is the ordinal number of an
    `expect` statement in a given example), but is accepted for ease of
    cutting and pasting.

  - From this release out, matchers using `to_` are preferred to using
    `should_`.  When negating a new syntax `to_` matcher, both of
    `to_not_` and `not_to` are accepted.

** Incompatible changes:

  - Invoking `specl` with no filename arguments no longer reads specs
    from standard input.  You must explicitly pass a "-" argument to get
    that behaviour.

  - RSpec has been moving from expressing `should_` expectations to
    using `to_` for technical reasons.  Specl now uses `to_` throughout,
    not for technical reasons, but because:

      (i) expectations almost always read better with `to_` instead of
          `should_`;
     (ii) it's shorter and easier to type, so is less "noisy" in among
          the important surrounding arguments.

    There are no plans to remove `should_` from Specl, so you can expect
    to safely continue to use your existing spec files indefinitely: But
    all mention of `should_` has been removed from documentation, and I